// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree[Base] should render correctly  1`] = `
<div>
  <div
    class="cfgesme soui-tree-tree cfg9i9o soui-tree-line"
  >
    <div
      class="cfgdgoa soui-tree-root"
      style="display: block;"
    >
      <div
        class="cfgawga soui-tree-node"
        dir="ltr"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.5 2C20.8807 2 22 3.11929 22 4.5V19.5C22 20.8807 20.8807 22 19.5 22H4.5C3.11929 22 2 20.8807 2 19.5V4.5C2 3.11929 3.11929 2 4.5 2H19.5ZM19.5 4H4.5C4.22386 4 4 4.22386 4 4.5V19.5C4 19.7761 4.22386 20 4.5 20H19.5C19.7761 20 20 19.7761 20 19.5V4.5C20 4.22386 19.7761 4 19.5 4ZM12 7C12.5128 7 12.9355 7.38604 12.9933 7.88338L13 8V11H16C16.5523 11 17 11.4477 17 12C17 12.5128 16.614 12.9355 16.1166 12.9933L16 13H13V16C13 16.5523 12.5523 17 12 17C11.4872 17 11.0645 16.614 11.0067 16.1166L11 16V13H8C7.44772 13 7 12.5523 7 12C7 11.4872 7.38604 11.0645 7.88338 11.0067L8 11H11V8C11 7.44772 11.4477 7 12 7Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            dir="ltr"
          >
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              node 0
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree[Base] should render correctly about disabled 1`] = `
<div>
  <div
    class="cfgesme soui-tree-tree c4qm399 soui-tree-noline"
  >
    <div
      class="cfgdgoa soui-tree-root"
      style="display: block;"
    >
      <div
        class="cfgawga soui-tree-node"
        dir="ltr"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="true"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            dir="ltr"
          >
            <div
              class="cbfujd7 soui-tree-checkbox c37ftc6 soui-checkbox-wrapper"
            >
              <input
                style="display: none;"
                tabindex="0"
                type="checkbox"
              />
              <span
                class="c-z8tvbj soui-checkbox-indicator-wrapper c-dt2g1l soui-checkbox-dark-indicator-wrapper"
              >
                <i
                  class="cftho8y soui-checkbox-indicator"
                  data-soui-role="checkbox-indicator"
                  tabindex="1"
                />
              </span>
            </div>
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 0
              </span>
            </div>
          </div>
        </div>
        <div
          class="cdgv0zr soui-tree-children"
          style="display: block;"
        >
          <div
            class="cfgawga soui-tree-node"
            dir="ltr"
          >
            <div
              class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
              dir="ltr"
            >
              <span
                class="c5nv7rm soui-tree-icon-wrapper"
                data-expanded="false"
                data-icon="false"
                dir="ltr"
              >
                <span
                  class="cfg7gw1 soui-tree-icon"
                  dir="ltr"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="c-ei1vtb soui-tree-content"
                data-disabled="true"
                dir="ltr"
              >
                <div
                  class="cbfujd7 soui-tree-checkbox c37ftc6 soui-checkbox-wrapper c4okxcy soui-checkbox-wrapper-disabled"
                >
                  <input
                    disabled=""
                    style="display: none;"
                    tabindex="0"
                    type="checkbox"
                  />
                  <span
                    class="c-z8tvbj soui-checkbox-indicator-wrapper c-dt2g1l soui-checkbox-dark-indicator-wrapper"
                  >
                    <i
                      class="cftho8y soui-checkbox-indicator"
                      data-soui-role="checkbox-indicator"
                      tabindex="-1"
                    />
                  </span>
                </div>
                <div
                  class="cfgejg5 soui-tree-text c-u53vqn soui-tree-text-disabled"
                  dir="ltr"
                >
                  <span
                    style="display: inline-block;"
                  >
                    node 0-0
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="cfgawga soui-tree-node"
            dir="ltr"
          >
            <div
              class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
              dir="ltr"
            >
              <span
                class="c5nv7rm soui-tree-icon-wrapper"
                data-expanded="false"
                data-icon="false"
                dir="ltr"
              >
                <span
                  class="cfg7gw1 soui-tree-icon"
                  dir="ltr"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="c-ei1vtb soui-tree-content"
                dir="ltr"
              >
                <div
                  class="cbfujd7 soui-tree-checkbox c37ftc6 soui-checkbox-wrapper"
                >
                  <input
                    style="display: none;"
                    tabindex="0"
                    type="checkbox"
                  />
                  <span
                    class="c-z8tvbj soui-checkbox-indicator-wrapper c-dt2g1l soui-checkbox-dark-indicator-wrapper"
                  >
                    <i
                      class="cftho8y soui-checkbox-indicator"
                      data-soui-role="checkbox-indicator"
                      tabindex="1"
                    />
                  </span>
                </div>
                <div
                  class="cfgejg5 soui-tree-text"
                  dir="ltr"
                >
                  <span
                    style="display: inline-block;"
                  >
                    node 0-1
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="cfgawga soui-tree-node"
            dir="ltr"
          >
            <div
              class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
              dir="ltr"
            >
              <span
                class="c5nv7rm soui-tree-icon-wrapper"
                data-expanded="false"
                data-icon="false"
                dir="ltr"
              >
                <span
                  class="cfg7gw1 soui-tree-icon"
                  dir="ltr"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="c-ei1vtb soui-tree-content"
                dir="ltr"
              >
                <div
                  class="cbfujd7 soui-tree-checkbox c37ftc6 soui-checkbox-wrapper"
                >
                  <input
                    style="display: none;"
                    tabindex="0"
                    type="checkbox"
                  />
                  <span
                    class="c-z8tvbj soui-checkbox-indicator-wrapper c-dt2g1l soui-checkbox-dark-indicator-wrapper"
                  >
                    <i
                      class="cftho8y soui-checkbox-indicator"
                      data-soui-role="checkbox-indicator"
                      tabindex="1"
                    />
                  </span>
                </div>
                <div
                  class="cfgejg5 soui-tree-text"
                  dir="ltr"
                >
                  <span
                    style="display: inline-block;"
                  >
                    node 0-2
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree[Base] should render correctly about drag 1`] = `
<div>
  <div
    class="cfgesme soui-tree-tree c4qm399 soui-tree-noline"
  >
    <div
      class="cfgdgoa soui-tree-root"
      style="display: block;"
    >
      <div
        class="cfgawga soui-tree-node"
        dir="ltr"
        draggable="true"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            dir="ltr"
          >
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 0
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cfgawga soui-tree-node"
        dir="ltr"
        draggable="true"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            dir="ltr"
          >
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 1
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cfgawga soui-tree-node"
        dir="ltr"
        draggable="true"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            dir="ltr"
          >
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 2
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cfgawga soui-tree-node"
        dir="ltr"
        draggable="true"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            dir="ltr"
          >
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 3
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree[Base] should render correctly about drag style 1`] = `
<div>
  <div
    class="cfgesme soui-tree-tree c4qm399 soui-tree-noline"
  >
    <div
      class="cfgdgoa soui-tree-root"
      style="display: block;"
    >
      <div
        class="cfgawga soui-tree-node"
        dir="ltr"
        draggable="true"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            dir="ltr"
          >
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 0
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cfgawga soui-tree-node"
        dir="ltr"
        draggable="true"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            dir="ltr"
          >
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 1
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cfgawga soui-tree-node"
        dir="ltr"
        draggable="true"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            dir="ltr"
          >
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 2
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cfgawga soui-tree-node"
        dir="ltr"
        draggable="true"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            dir="ltr"
          >
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 3
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cfgawga soui-tree-node"
        dir="ltr"
        draggable="true"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            dir="ltr"
          >
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 4
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree[Base] should render correctly about expand 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <button
      class="c-ljqh2g soui-button-secondary c-hb33si soui-button-button c9ewgyu soui-button-outline cb5j5wr soui-button-small"
      dir="ltr"
      type="button"
    >
      <span>
        Expand all
      </span>
    </button>
    <button
      class="c-ljqh2g soui-button-secondary c-hb33si soui-button-button c9ewgyu soui-button-outline cb5j5wr soui-button-small"
      dir="ltr"
      type="button"
    >
      <span>
        Collapse all
      </span>
    </button>
  </div>
  <div
    class="cfgesme soui-tree-tree c4qm399 soui-tree-noline"
  >
    <div
      class="cfgdgoa soui-tree-root"
      style="display: block;"
    >
      <div
        class="cfgawga soui-tree-node"
        dir="ltr"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            dir="ltr"
          >
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 0
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cfgawga soui-tree-node"
        dir="ltr"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            dir="ltr"
          >
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 1
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree[Base] should render correctly about highlight 1`] = `
<div>
  <div
    class="cfgesme soui-tree-tree c4qm399 soui-tree-noline"
  >
    <div
      class="cfgdgoa soui-tree-root"
      style="display: block;"
    >
      <div
        class="cfgawga soui-tree-node"
        dir="ltr"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            data-active="false"
            dir="ltr"
          >
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 0
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cfgawga soui-tree-node"
        dir="ltr"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            data-active="false"
            dir="ltr"
          >
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 1
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cfgawga soui-tree-node"
        dir="ltr"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            data-active="false"
            dir="ltr"
          >
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 2
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cfgawga soui-tree-node"
        dir="ltr"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            data-active="false"
            dir="ltr"
          >
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 3
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cfgawga soui-tree-node"
        dir="ltr"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            data-active="false"
            dir="ltr"
          >
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 4
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree[Base] should render correctly about line 1`] = `
<div>
  <div
    class="cfgesme soui-tree-tree c4qm399 soui-tree-noline"
  >
    <div
      class="cfgdgoa soui-tree-root"
      style="display: block;"
    >
      <div
        class="cfgawga soui-tree-node"
        dir="ltr"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="true"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            dir="ltr"
          >
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 0
              </span>
            </div>
          </div>
        </div>
        <div
          class="cdgv0zr soui-tree-children"
          style="display: block;"
        >
          <div
            class="cfgawga soui-tree-node"
            dir="ltr"
          >
            <div
              class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
              dir="ltr"
            >
              <span
                class="c5nv7rm soui-tree-icon-wrapper"
                data-expanded="true"
                data-icon="false"
                dir="ltr"
              >
                <span
                  class="cfg7gw1 soui-tree-icon"
                  dir="ltr"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="c-ei1vtb soui-tree-content"
                dir="ltr"
              >
                <div
                  class="cfgejg5 soui-tree-text"
                  dir="ltr"
                >
                  <span
                    style="display: inline-block;"
                  >
                    node 0-0
                  </span>
                </div>
              </div>
            </div>
            <div
              class="cdgv0zr soui-tree-children"
              style="display: block;"
            >
              <div
                class="cfgawga soui-tree-node"
                dir="ltr"
              >
                <div
                  class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
                  dir="ltr"
                >
                  <span
                    class="c5nv7rm soui-tree-icon-wrapper"
                    data-expanded="false"
                    data-icon="false"
                    dir="ltr"
                  >
                    <span
                      class="cfg7gw1 soui-tree-icon"
                      dir="ltr"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                        />
                      </svg>
                    </span>
                  </span>
                  <div
                    class="c-ei1vtb soui-tree-content"
                    dir="ltr"
                  >
                    <div
                      class="cfgejg5 soui-tree-text"
                      dir="ltr"
                    >
                      <span
                        style="display: inline-block;"
                      >
                        node 0-0-0
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="cfgawga soui-tree-node"
            dir="ltr"
          >
            <div
              class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
              dir="ltr"
            >
              <span
                class="c5nv7rm soui-tree-icon-wrapper"
                data-expanded="false"
                data-icon="false"
                dir="ltr"
              >
                <span
                  class="cfg7gw1 soui-tree-icon"
                  dir="ltr"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="c-ei1vtb soui-tree-content"
                dir="ltr"
              >
                <div
                  class="cfgejg5 soui-tree-text"
                  dir="ltr"
                >
                  <span
                    style="display: inline-block;"
                  >
                    node 0-1
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree[Base] should render correctly about loader 1`] = `
<div>
  <div
    class="cfgesme soui-tree-tree c4qm399 soui-tree-noline"
  >
    <div
      class="cfgdgoa soui-tree-root"
      style="display: block;"
    >
      <div
        class="cfgawga soui-tree-node cfg9ezq soui-tree-leaf"
        dir="ltr"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            dir="ltr"
          >
            <div
              class="cbfujd7 soui-tree-checkbox c37ftc6 soui-checkbox-wrapper"
            >
              <input
                style="display: none;"
                tabindex="0"
                type="checkbox"
              />
              <span
                class="c-z8tvbj soui-checkbox-indicator-wrapper c-dt2g1l soui-checkbox-dark-indicator-wrapper"
              >
                <i
                  class="cftho8y soui-checkbox-indicator"
                  data-soui-role="checkbox-indicator"
                  tabindex="1"
                />
              </span>
            </div>
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 0
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cfgawga soui-tree-node cfg9ezq soui-tree-leaf"
        dir="ltr"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            dir="ltr"
          >
            <div
              class="cbfujd7 soui-tree-checkbox c37ftc6 soui-checkbox-wrapper"
            >
              <input
                style="display: none;"
                tabindex="0"
                type="checkbox"
              />
              <span
                class="c-z8tvbj soui-checkbox-indicator-wrapper c-dt2g1l soui-checkbox-dark-indicator-wrapper"
              >
                <i
                  class="cftho8y soui-checkbox-indicator"
                  data-soui-role="checkbox-indicator"
                  tabindex="1"
                />
              </span>
            </div>
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 1
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cfgawga soui-tree-node cfg9ezq soui-tree-leaf"
        dir="ltr"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            dir="ltr"
          >
            <div
              class="cbfujd7 soui-tree-checkbox c37ftc6 soui-checkbox-wrapper"
            >
              <input
                style="display: none;"
                tabindex="0"
                type="checkbox"
              />
              <span
                class="c-z8tvbj soui-checkbox-indicator-wrapper c-dt2g1l soui-checkbox-dark-indicator-wrapper"
              >
                <i
                  class="cftho8y soui-checkbox-indicator"
                  data-soui-role="checkbox-indicator"
                  tabindex="1"
                />
              </span>
            </div>
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 2
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cfgawga soui-tree-node cfg9ezq soui-tree-leaf"
        dir="ltr"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            dir="ltr"
          >
            <div
              class="cbfujd7 soui-tree-checkbox c37ftc6 soui-checkbox-wrapper"
            >
              <input
                style="display: none;"
                tabindex="0"
                type="checkbox"
              />
              <span
                class="c-z8tvbj soui-checkbox-indicator-wrapper c-dt2g1l soui-checkbox-dark-indicator-wrapper"
              >
                <i
                  class="cftho8y soui-checkbox-indicator"
                  data-soui-role="checkbox-indicator"
                  tabindex="1"
                />
              </span>
            </div>
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 3
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cfgawga soui-tree-node cfg9ezq soui-tree-leaf"
        dir="ltr"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            dir="ltr"
          >
            <div
              class="cbfujd7 soui-tree-checkbox c37ftc6 soui-checkbox-wrapper"
            >
              <input
                style="display: none;"
                tabindex="0"
                type="checkbox"
              />
              <span
                class="c-z8tvbj soui-checkbox-indicator-wrapper c-dt2g1l soui-checkbox-dark-indicator-wrapper"
              >
                <i
                  class="cftho8y soui-checkbox-indicator"
                  data-soui-role="checkbox-indicator"
                  tabindex="1"
                />
              </span>
            </div>
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              <span
                style="display: inline-block;"
              >
                node 4
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree[Base] should render correctly about onChange 1`] = `
<div>
  <div
    class="c-c7kcmq soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="c7ok09u soui-radio-wrapper cgmhgbp soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="ch6vfkl soui-radio-indicator-wrapper"
      >
        <span
          class="c-g5gjj6 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c1w8wma soui-radio-desc"
      >
        模式 0
      </span>
    </div>
    <div
      class="c7ok09u soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="ch6vfkl soui-radio-indicator-wrapper"
      >
        <span
          class="c-g5gjj6 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c1w8wma soui-radio-desc"
      >
        模式 1
      </span>
    </div>
    <div
      class="c7ok09u soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="ch6vfkl soui-radio-indicator-wrapper"
      >
        <span
          class="c-g5gjj6 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c1w8wma soui-radio-desc"
      >
        模式 2
      </span>
    </div>
    <div
      class="c7ok09u soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="ch6vfkl soui-radio-indicator-wrapper"
      >
        <span
          class="c-g5gjj6 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c1w8wma soui-radio-desc"
      >
        模式 3
      </span>
    </div>
    <div
      class="c7ok09u soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="ch6vfkl soui-radio-indicator-wrapper"
      >
        <span
          class="c-g5gjj6 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c1w8wma soui-radio-desc"
      >
        模式 4
      </span>
    </div>
  </div>
  <div
    style="display: flex;"
  >
    <div
      style="flex: 1;"
    >
      <div
        class="cfgesme soui-tree-tree c4qm399 soui-tree-noline"
      >
        <div
          class="cfgdgoa soui-tree-root"
          style="display: block;"
        >
          <div
            class="cfgawga soui-tree-node"
            dir="ltr"
          >
            <div
              class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
              dir="ltr"
            >
              <span
                class="c5nv7rm soui-tree-icon-wrapper"
                data-expanded="false"
                data-icon="false"
                dir="ltr"
              >
                <span
                  class="cfg7gw1 soui-tree-icon"
                  dir="ltr"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="c-ei1vtb soui-tree-content"
                dir="ltr"
              >
                <div
                  class="cbfujd7 soui-tree-checkbox c37ftc6 soui-checkbox-wrapper"
                >
                  <input
                    style="display: none;"
                    tabindex="0"
                    type="checkbox"
                  />
                  <span
                    class="c-z8tvbj soui-checkbox-indicator-wrapper c-dt2g1l soui-checkbox-dark-indicator-wrapper"
                  >
                    <i
                      class="cftho8y soui-checkbox-indicator"
                      data-soui-role="checkbox-indicator"
                      tabindex="1"
                    />
                  </span>
                </div>
                <div
                  class="cfgejg5 soui-tree-text"
                  dir="ltr"
                >
                  <span
                    style="display: inline-block;"
                  >
                    node 0
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="cfgawga soui-tree-node"
            dir="ltr"
          >
            <div
              class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
              dir="ltr"
            >
              <span
                class="c5nv7rm soui-tree-icon-wrapper"
                data-expanded="false"
                data-icon="false"
                dir="ltr"
              >
                <span
                  class="cfg7gw1 soui-tree-icon"
                  dir="ltr"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="c-ei1vtb soui-tree-content"
                dir="ltr"
              >
                <div
                  class="cbfujd7 soui-tree-checkbox c37ftc6 soui-checkbox-wrapper"
                >
                  <input
                    style="display: none;"
                    tabindex="0"
                    type="checkbox"
                  />
                  <span
                    class="c-z8tvbj soui-checkbox-indicator-wrapper c-dt2g1l soui-checkbox-dark-indicator-wrapper"
                  >
                    <i
                      class="cftho8y soui-checkbox-indicator"
                      data-soui-role="checkbox-indicator"
                      tabindex="1"
                    />
                  </span>
                </div>
                <div
                  class="cfgejg5 soui-tree-text"
                  dir="ltr"
                >
                  <span
                    style="display: inline-block;"
                  >
                    node 1
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="cfgawga soui-tree-node"
            dir="ltr"
          >
            <div
              class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
              dir="ltr"
            >
              <span
                class="c5nv7rm soui-tree-icon-wrapper"
                data-expanded="false"
                data-icon="false"
                dir="ltr"
              >
                <span
                  class="cfg7gw1 soui-tree-icon"
                  dir="ltr"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="c-ei1vtb soui-tree-content"
                dir="ltr"
              >
                <div
                  class="cbfujd7 soui-tree-checkbox c37ftc6 soui-checkbox-wrapper"
                >
                  <input
                    style="display: none;"
                    tabindex="0"
                    type="checkbox"
                  />
                  <span
                    class="c-z8tvbj soui-checkbox-indicator-wrapper c-dt2g1l soui-checkbox-dark-indicator-wrapper"
                  >
                    <i
                      class="cftho8y soui-checkbox-indicator"
                      data-soui-role="checkbox-indicator"
                      tabindex="1"
                    />
                  </span>
                </div>
                <div
                  class="cfgejg5 soui-tree-text"
                  dir="ltr"
                >
                  <span
                    style="display: inline-block;"
                  >
                    node 2
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="cfgawga soui-tree-node"
            dir="ltr"
          >
            <div
              class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
              dir="ltr"
            >
              <span
                class="c5nv7rm soui-tree-icon-wrapper"
                data-expanded="false"
                data-icon="false"
                dir="ltr"
              >
                <span
                  class="cfg7gw1 soui-tree-icon"
                  dir="ltr"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="c-ei1vtb soui-tree-content"
                dir="ltr"
              >
                <div
                  class="cbfujd7 soui-tree-checkbox c37ftc6 soui-checkbox-wrapper"
                >
                  <input
                    style="display: none;"
                    tabindex="0"
                    type="checkbox"
                  />
                  <span
                    class="c-z8tvbj soui-checkbox-indicator-wrapper c-dt2g1l soui-checkbox-dark-indicator-wrapper"
                  >
                    <i
                      class="cftho8y soui-checkbox-indicator"
                      data-soui-role="checkbox-indicator"
                      tabindex="1"
                    />
                  </span>
                </div>
                <div
                  class="cfgejg5 soui-tree-text"
                  dir="ltr"
                >
                  <span
                    style="display: inline-block;"
                  >
                    node 3
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="cfgawga soui-tree-node"
            dir="ltr"
          >
            <div
              class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
              dir="ltr"
            >
              <span
                class="c5nv7rm soui-tree-icon-wrapper"
                data-expanded="false"
                data-icon="false"
                dir="ltr"
              >
                <span
                  class="cfg7gw1 soui-tree-icon"
                  dir="ltr"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M18.2209 9.72141L12.6344 15.2952C12.2441 15.6847 11.6121 15.6846 11.2218 15.2952L5.6979 9.78337C5.30695 9.39327 5.30625 8.76011 5.69635 8.36915C5.88258 8.18251 6.13499 8.07697 6.39865 8.0755L17.5091 8.01351C18.0613 8.01043 18.5116 8.45564 18.5146 9.00792C18.5161 9.27546 18.4103 9.53244 18.2209 9.72141Z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="c-ei1vtb soui-tree-content"
                dir="ltr"
              >
                <div
                  class="cbfujd7 soui-tree-checkbox c37ftc6 soui-checkbox-wrapper"
                >
                  <input
                    style="display: none;"
                    tabindex="0"
                    type="checkbox"
                  />
                  <span
                    class="c-z8tvbj soui-checkbox-indicator-wrapper c-dt2g1l soui-checkbox-dark-indicator-wrapper"
                  >
                    <i
                      class="cftho8y soui-checkbox-indicator"
                      data-soui-role="checkbox-indicator"
                      tabindex="1"
                    />
                  </span>
                </div>
                <div
                  class="cfgejg5 soui-tree-text"
                  dir="ltr"
                >
                  <span
                    style="display: inline-block;"
                  >
                    node 4
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <pre
      style="flex: 1; margin: 10px; background: rgb(29, 29, 29); color: rgb(148, 213, 252); border-radius: 4px; padding: 10px;"
    >
      <div
        style="margin-bottom: 10px;"
      >
        <code
          style="color: rgb(93, 142, 78);"
        >
          <span>
            /
          </span>
          <span>
            /
          </span>
           DataItem[]
        </code>
      </div>
      <code
        style="color: rgb(117, 117, 117);"
      >
        no data
      </code>
    </pre>
  </div>
</div>
`;

exports[`Tree[Base] should render correctly about size 1`] = `
<div>
  <div
    class="cfgesme soui-tree-tree cfg9i9o soui-tree-line"
  >
    <div
      class="cfgdgoa soui-tree-root"
      style="display: block;"
    >
      <div
        class="cfgawga soui-tree-node"
        dir="ltr"
      >
        <div
          class="c3ed1uq soui-tree-content-wrapper c-8o0tre soui-tree-childnode"
          dir="ltr"
        >
          <span
            class="c5nv7rm soui-tree-icon-wrapper"
            data-expanded="false"
            data-icon="false"
            dir="ltr"
          >
            <span
              class="cfg7gw1 soui-tree-icon"
              dir="ltr"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.5 2C20.8807 2 22 3.11929 22 4.5V19.5C22 20.8807 20.8807 22 19.5 22H4.5C3.11929 22 2 20.8807 2 19.5V4.5C2 3.11929 3.11929 2 4.5 2H19.5ZM19.5 4H4.5C4.22386 4 4 4.22386 4 4.5V19.5C4 19.7761 4.22386 20 4.5 20H19.5C19.7761 20 20 19.7761 20 19.5V4.5C20 4.22386 19.7761 4 19.5 4ZM12 7C12.5128 7 12.9355 7.38604 12.9933 7.88338L13 8V11H16C16.5523 11 17 11.4477 17 12C17 12.5128 16.614 12.9355 16.1166 12.9933L16 13H13V16C13 16.5523 12.5523 17 12 17C11.4872 17 11.0645 16.614 11.0067 16.1166L11 16V13H8C7.44772 13 7 12.5523 7 12C7 11.4872 7.38604 11.0645 7.88338 11.0067L8 11H11V8C11 7.44772 11.4477 7 12 7Z"
                />
              </svg>
            </span>
          </span>
          <div
            class="c-ei1vtb soui-tree-content"
            dir="ltr"
          >
            <div
              class="cfgejg5 soui-tree-text"
              dir="ltr"
            >
              node 0
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
